--- a/src/countries-list/Countries-list.css
+++ b/src/countries-list/Countries-list.css
@@ -3,10 +3,13 @@
 }
 .card {
     width: 200px;
+    margin: 0.5em;
     border-radius: 10px;
     border-color: grey;
     border-style: solid;
     border-width: 1px;
+    text-decoration: none;
+    color: black;
 }
 .card img {
     width: auto;
@@ -14,7 +17,16 @@
 }
 .card h2 {
     max-width: 160px;
+    margin-left: 0.5em;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+/* .card a {
+    text-decoration: none;
+    color: black;
+} */
+.country-cards {
+    display: flex;
+    flex-wrap: wrap;
 }
