--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,12 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
 
-.Component {
-  padding: 1em;
+.main {
+  padding: 0.5em;
 }
