--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -1,7 +1,32 @@
 .contact {
-    padding: 1em;
-    display: block;
-}
-form {
+    margin: 0 auto;
     text-align: center;
+}
+
+form {
+    display: inline-block;
+    width: 400px;
+    flex-direction: column;
+}
+
+#name,
+#email,
+#message {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #333333;
+    border-radius: 3px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+}
+
+textarea {
+    height: 150px;
+}
+
+#submit {
+    width: 100px;
+    height: 30px;
+    border: 1px solid #333333;
+    border-radius: 3px;
 }
